...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorPrimaryLowTransparent"
    tools:context=".ui.movie.MovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieListRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:paddingStart="@dimen/space_8"
...
